2nd commit, added readme and revised css

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <img src="./assets/images/illustration-article.svg" alt="">
       <h4 class="card-type">Learning</h4>
       <h4 class="card-published">Published 21 Dec 2023</h4>
-      <h2>HTML & CSS foundations</h2>
-      <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      <h2 class="title">HTML & CSS foundations</h2>
+      <p class="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       <div class="hero-container">
-        <img src="./assets/images/image-avatar.webp" alt="image-avatar">
+        <img class="hero" src="./assets/images/image-avatar.webp" alt="image-avatar">
         <p>Greg Hooper</p>
       </div>
     </div>
