--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <footer>
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="https://github.com/1lbert">Albert Celestino</a>.
     </div>
   </footer>
 </body>
